What's changed in loggerhead?
=============================

1.20.0
----

    - Port to Breezy (https://www.breezy-vcs.org/). (Jelmer Vernooĳ)

    - Port to Python 3. (Jelmer Vernooĳ)

    - Serve-branches has been renamed to 'loggerhead-serve'. (Jelmer Vernooĳ)

    - Fixed weird icon in file lists (e.g. revision summaries) when a file or
      directory with a blank name was listed. (Cruz Bishop, #387337).

    - Add directory icons for directories in file lists (e.g. revision
      summaries). Previously they were using the file icon.
      (Cruz Bishop, #1053340).

    - Format files under one kilobyte as "x bytes". (Cruz Bishop, #990217)

    - Make the number of lines of context in embedded diffs on revision
      pages configurable via a ``context`` query argument. (Paul Nixon)

    - Add ``loggerhead/middleware`` and a few other files to the sdist.
      (Toshio Kuratomi)

    - Widen the line number boxes just a little bit. (Cruz Bishop, #310255)

    - Use breaking word-wrap on the entire information box. (Cruz Bishop,
      #258368)

    - Add some more minor UI changes to do with rounded corners. (Cruz
      Bishop)

    - Set line-height on <pre> elements in file views, fixing misaligned
      line numbers in some browsers. (Colin Watson)

    - Drop dependency on simplejson in favour of the standard library's json
      module in Python >= 2.6. (Colin Watson)

1.18.2 [12Sep2012]
------------------

    - Add ``bzr load-test-loggerhead`` as a way to make sure loggerhead can
      handle concurrent requests, etc. Scripts can be written that spawn
      multiple threads, and issue concurrent requests.
      (John Arbash Meinel)

    - HEAD requests should not return body content. This is done by adding
      another wsgi middleware that strips the body when the REQUEST_METHOD is
      HEAD. Note that you have to add the middleware into your pipeline, and
      it does not decrease the actual work done.
      (John Arbash Meinel, #716201)
